# DjangoProject

./: .env.example  README.md  category_fixture.json  products_fixture.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_post_preview.py  0003_alter_post_published_alter_post_views_count.py  0004_alter_post_preview.py
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_products.py  create_group.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options.py  0003_category_description_product_created_at_and_more.py  0004_alter_product_image.py  0005_alter_product_options_product_is_publish_and_more.py  0006_alter_product_options.py  0007_alter_product_is_publish.py  0008_alter_product_options.py
catalog/templates/: add_product.html  contacts.html  product_detail.html  products_list.html
catalog/templates/catalog/: base.html  product_delete_confirm.html  product_detail.html  product_form.html  products_list.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createadmin.py
users/migrations/: 0001_initial.py  0002_customuser_token.py  0003_remove_customuser_username.py
users/templates/users/: profile_detail.html  profile_edit.html
